--- a/roles/media-server/templates/docker-compose.yml.j2
+++ b/roles/media-server/templates/docker-compose.yml.j2
@@ -9,11 +9,11 @@ services:
     links:
       - jackett
     volumes:
-      - "{{ storage-root }}"/config/sonarr:/config
-      - "{{ storage-root }}"/tv:/tv
-      - "{{ storage-root }}"/downloads/complete/tv:/downloads
+      - "{{ storage.root }}"/config/sonarr:/config
+      - "{{ storage.root }}"/tv:/tv
+      - "{{ storage.root }}"/downloads/complete/tv:/downloads
       - /etc/localtime:/etc/localtime:ro
-    # - "{{ storage-root }}"/downloads/complete/tv_import:/tv_import
+    # - "{{ storage.root }}"/downloads/complete/tv_import:/tv_import
     ports:
       - {{ sonarr.port }}:8989
     environment:
@@ -26,9 +26,9 @@ services:
     image: linuxserver/radarr
     container_name: radarr
     volumes:
-      - "{{ storage-root }}"/config/radarr:/config
-      - "{{ storage-root }}"/movies:/movies
-      - "{{ storage-root }}"/downloads/complete/movies:/downloads
+      - "{{ storage.root }}"/config/radarr:/config
+      - "{{ storage.root }}"/movies:/movies
+      - "{{ storage.root }}"/downloads/complete/movies:/downloads
       - /etc/localtime:/etc/localtime:ro
     ports:
       - {{ radarr.port }}:7878
@@ -42,9 +42,9 @@ services:
     image: linuxserver/lidarr
     container_name: lidarr
     volumes:
-      - "{{ storage-root }}"/config/lidarr:/config
-      - "{{ storage-root }}"/music:/music
-      - "{{ storage-root }}"/downloads/complete/music:/downloads
+      - "{{ storage.root }}"/config/lidarr:/config
+      - "{{ storage.root }}"/music:/music
+      - "{{ storage.root }}"/downloads/complete/music:/downloads
     ports:
       - {{ lidarr-port }}:7879
     environment:
@@ -56,8 +56,8 @@ services:
     image: linuxserver/jackett
     container_name: jackett
     volumes:
-      - "{{ storage-root }}"/jackett/config:/config
-      - "{{ storage-root }}"/jackett/downloads:/downloads
+      - "{{ storage.root }}"/jackett/config:/config
+      - "{{ storage.root }}"/jackett/downloads:/downloads
       - /etc/localtime:/etc/localtime:ro
     ports:
       - {{ jackett.port }}:9117
@@ -72,8 +72,8 @@ services:
     container_name: transmission
     network_mode: host
     volumes:
-      - "{{ storage-root }}"/config/transmission:/config
-      - "{{ storage-root }}"/downloads:/downloads
+      - "{{ storage.root }}"/config/transmission:/config
+      - "{{ storage.root }}"/downloads:/downloads
     ports:
         - 9091:9091
         - 51413:51413
@@ -88,8 +88,8 @@ services:
     container_name: deluge
     network_mode: host
     volumes:
-      - "{{ storage-root }}"/config/deluge:/config
-      - "{{ storage-root }}"/downloads:/downloads
+      - "{{ storage.root }}"/config/deluge:/config
+      - "{{ storage.root }}"/downloads:/downloads
     environment:
       - PUID=${PUID}
       - PGID=${PGID
@@ -100,7 +100,7 @@ services:
     container_name: ombi
     image: linuxserver/ombi
     volumes:
-      - "{{ storage-root }}"/config/ombi:/config
+      - "{{ storage.root }}"/config/ombi:/config
   #    - ${USERDIR}/docker/certs:/certs
     ports:
       - {{ ombi.port }}:3579
@@ -114,7 +114,7 @@ services:
     container_name: heimdall
     image: linuxserver/heimdall
     volumes:
-      - "{{ storage-root }}"/config/heimdall:/config
+      - "{{ storage.root }}"/config/heimdall:/config
     ports:
       - 80:80
       - 443:443
@@ -128,8 +128,8 @@ services:
     container_name: tautulli
     image: linuxserver/tautulli
     volumes:
-      - "{{ storage-root }}"/config/tautulli:/config
-      - "{{ storage-root }}"/logs/tautulli:/logs:ro
+      - "{{ storage.root }}"/config/tautulli:/config
+      - "{{ storage.root }}"/logs/tautulli:/logs:ro
     ports:
       - {{ tautulli.port }}:8181
     environment:
@@ -142,11 +142,11 @@ services:
     container_name: plex
     image: plexinc/pms-docker
     volumes:
-      - "{{ storage-root }}"/config/plex:/config
-      - "{{ storage-root }}"/config/plex-transcode:/transcode
-      - "{{ storage-root }}"/movies:/data/movies
-      - "{{ storage-root }}"/tv:/data/tv
-      - "{{ storage-root }}"/music:/data/music
+      - "{{ storage.root }}"/config/plex:/config
+      - "{{ storage.root }}"/config/plex-transcode:/transcode
+      - "{{ storage.root }}"/movies:/data/movies
+      - "{{ storage.root }}"/tv:/data/tv
+      - "{{ storage.root }}"/music:/data/music
     environment:
       - TZ=${TZ}
       - PLEX_CLAIM= "{{ plex.token }}"
