--- a/roles/media-server/templates/docker-compose.yml.j2
+++ b/roles/media-server/templates/docker-compose.yml.j2
@@ -31,7 +31,7 @@ services:
       - "{{ storage.root }}"/downloads/complete/movies:/downloads
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - "{{ radarr.port }}":7878
+      - "{{ radarr_port }}":7878
     environment:
       - PUID=${PUID}
       - PGID=${PGID
