--- a/roles/media-server/templates/autoProcess.ini.j2
+++ b/roles/media-server/templates/autoProcess.ini.j2
@@ -13,8 +13,8 @@ ssl = True
 apikey = "{{ radarr_api }}"
 
 [MP4]
-ffmpeg = "{{ ffmpeg.location }}" #/usr/bin/ffmpeg
-ffprobe = "{{ ffprobe.location }}" #/usr/bin/ffprobe
+ffmpeg = "{{ ffmpeg_location }}" #/usr/bin/ffmpeg
+ffprobe = "{{ ffprobe_location }}" #/usr/bin/ffprobe
 threads = auto
 output_directory =
 copy_to =
