--- a/roles/media-server/templates/autoProcess.ini.j2
+++ b/roles/media-server/templates/autoProcess.ini.j2
@@ -69,7 +69,7 @@ password = "{{ deluge.password }}"
 sonarr-label = sonarr
 radarr-label = radarr
 bypass-label = bypass
-port = "{{ deluge.port}}" #58846
+port = "{{ deluge_port}}" #58846
 output_directory =
 remove = false
 
